What's New for FreeImage

* : fixed
- : removed
! : changed
+ : added

Month day, 2006 - 3.9.2
* [Carsten Klein] fixed a bug in FreeImage_SetMetadata occuring when deleting a tag

July 16th, 2006 - 3.9.1
* [Ryan Rubley] fixed a bug in PluginGIF plugin causing FreeImage to crash on malformed GIF files

July 6th, 2006 - 3.9.0
! FreeImage now uses libPNG 1.2.12
! FreeImage now uses libTIFF 3.8.2 (with patch 2006-06-24)
! FreeImage_Allocate/FreeImage_Allocate now set the resolution to 72 dpi instead of 0
+ [Herve Drolon/Petr Pytelka] added a raw FAX G3 format loader
+ [Herve Drolon] added support for most image types to FreeImage_Rescale
+ [Herve Drolon] added FreeImage_MakeThumbnail
+ [Herve Drolon] added support for 64-bit images to FreeImage_ConvertTo32Bits
+ [Herve Drolon] added support for Exif tags to TIF plugin (read only)
+ [Herve Drolon] added FreeImage_ReadMemory
+ [Herve Drolon] added FreeImage_WriteMemory
+ [Herve Drolon] added new Exif maker note tags
+ [Sherman Wilcox] added a SGI file format loader
+ [Herve Drolon] added support for separated images to PluginTIFF
+ [Herve Drolon] added support for progressive-JPEG saving to PluginJPEG
* [Carsten Klein] FreeImage_Dither and FreeImage_Threshold now work with palettized 8-bit dib
* [Christophe Petit] fixed a bug in FreeImage_GetFIFFromFilenameU occuring with files without extension
* [Leigh Brasington] fixed a bug in PluginGIF causing FreeImage not working on Win/98/ME
* [Herve Drolon] fixed a bug in PluginTIFF with writing of JPEG-in-TIFF files
* [Jojakim Stahl] fixed a bug occuring with 4-bit PCX files
* [Sandor Szalacsi] fixed a bug in FreeImage_SetBackgroundColor (bkgnd clearing)
* [Petr Pytelka] fixed PluginTIFF::_tiffSizeProc failing on some images
* [Sherman Wilcox] fixed a bug in DDS plugin when loading images whose size is not a multiple of 4
* [Sherman Wilcox] fixed a memory leak in PluginDDS::LoadDXT_Helper