@@ -6,6 +6,7 @@ What's New for FreeImage
 + : added
 
 Month day, 2006 - 3.9.2
++ [Herve Drolon] added full support for 16-bit greyscale and 48-bit RGB to the PNM plugin
 * [Carsten Klein] fixed a bug in FreeImage_SetMetadata occuring when deleting a tag
 
 July 16th, 2006 - 3.9.1
